# portal

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile.frontend  PERSONALIZATION_IMPLEMENTATION.md  README.md  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  stack.yml
backend/: .dockerignore  Dockerfile  README.md  db.sqlite3  manage.py  pyproject.toml
backend/accounts/: api.py  apps.py  mfa_adapter.py  schemas.py  services.py  tests.py
backend/accounts/api/: __init__.py  exception_handlers.py  router.py  router_auth.py  router_headless.py  router_oauth.py  security.py
backend/accounts/services/: __init__.py  auth.py  emailing.py  form_token.py  headless.py  mfa.py  oauth.py  passkeys.py  profile.py  rate_limit.py  sessions.py
backend/accounts/tests/: test_api.py
backend/accounts/transport/: schemas.py
backend/aef_backend/: asgi.py  db.sqlite3  tests.py  urls.py  wsgi.py
backend/aef_backend/settings/: __init__.py  base.py  dev.py  prod.py
backend/core/: admin.py  api.py  models.py  schemas.py
backend/core/migrations/: 0001_initial.py  0002_homepagemodal.py  __init__.py
backend/core/tests/: __init__.py  test_homepage_modals.py
backend/nominations/: admin.py  api.py  data.py  games_api.py  models.py  schemas.py  services.py  tests.py  views.py
backend/nominations/fixtures/: nominations.json
backend/nominations/migrations/: 0001_initial.py  0002_nomination_models.py  0003_alter_nominationvote_nomination_and_more.py  0004_voting_and_nomination_voting.py  0005_alter_voting_code.py  0006_game_model.py  0007_game_title_unique.py
backend/requirements/: base.txt  dev.txt
backend/votings/: api.py
services/access/: Dockerfile  pyproject.toml
services/access/src/: manage.py
services/access/src/access_control/: README.md  api.py  apps.py  context.py  dsar.py  models.py  permissions_mvp.py  rollout_api.py  rollout_services.py  schemas.py  services.py
services/access/src/access_control/migrations/: 0001_initial.py  0002_seed_mvp_permissions.py  0003_seed_updated_permissions.py  0004_tenant_admin_audit_event.py  0005_rename_access__tenantadmin_tenant_id_action_idx_access_cont_tenant__229ff0_idx_and_more.py  (+13 more)
services/access/src/app/: cloud_runtime.py  settings.py  urls.py
services/access/src/core/: __init__.py  admin.py  api.py  apps.py  models.py  schemas.py
services/access/src/personalization/: api.py  apps.py  models.py  schemas.py  services.py
services/activity/: Dockerfile  pyproject.toml
services/activity/src/: manage.py
services/activity/src/activity/: README.md  api.py  audit.py  context.py  dsar.py  enums.py  fields.py  health.py  i18n.py  logging_config.py  media.py  models.py  permissions.py  portal_client.py  privacy.py  schemas.py  services.py  sse.py  test_integration.py  test_settings_security.py  tests.py
services/activity/src/app/: cloud_runtime.py  settings.py  urls.py
services/activity/src/core/: http.py  schemas.py
services/bff/: .env.example  Dockerfile  README.md  pyproject.toml
services/bff/src/app/: cloud_runtime.py  settings.py  urls.py
services/bff/src/bff/: README.md  api.py  apps.py  audit.py  csrf.py  dsar.py  errors.py  middleware.py  models.py  proxy.py  security.py  session_store.py  tenant.py  test_settings_security.py  tests.py  tests_tenant_context.py
services/events/: Dockerfile  pyproject.toml
services/events/src/app/: settings.py  urls.py
services/events/src/events/: api.py  apps.py  context.py  dsar.py  models.py  permissions.py  portal_client.py  schemas.py  security.py  service.py  test_settings_security.py  tests.py
services/featureflags/: Dockerfile  pyproject.toml
services/featureflags/src/: manage.py
services/featureflags/src/app/: settings.py  urls.py
services/featureflags/src/core/: errors.py  http.py  schemas.py  ymq.py
services/featureflags/src/featureflags/: __init__.py  api.py  apps.py  context.py  models.py  schemas.py  security.py  service.py  tests.py
services/gamification/: Dockerfile  pyproject.toml
services/gamification/src/app/: cloud_runtime.py  settings.py  urls.py
services/gamification/src/core/: errors.py  http.py
services/gamification/src/gamification/: api.py  apps.py  context.py  dsar.py  models.py  permissions.py  schemas.py  security.py  services.py  test_settings_security.py  tests.py
services/id/: .env.example  Dockerfile  README.md  RUNBOOK.md  TROUBLESHOOTING.md  conftest.py  pyproject.toml  pytest.ini
services/id/k8s/: configmap.yaml  deployment.yaml  jobs.yaml  service.yaml
services/id/src/: manage.py
services/id/src/accounts/: __init__.py  apps.py  models.py
services/id/src/app/: settings.py  urls.py
services/id/src/core/: health.py  logging_config.py  middleware.py  monitoring.py  resilience.py
services/id/src/idp/: admin.py  apps.py  keys.py  models.py  router.py  schemas.py  scopes.py  services.py  views.py
services/id/src/updspaceid/: api.py  apps.py  audit.py  dev_api.py  emailing.py  enums.py  http.py  models.py  openapi.yaml  providers.py  schemas.py  services.py
services/portal/: Dockerfile  pyproject.toml
services/portal/src/app/: settings.py  urls.py
services/portal/src/portal/: access.py  api.py  apps.py  audit.py  context.py  dsar.py  enums.py  models.py  schemas.py  security.py  services.py  test_settings_security.py  tests.py
services/voting/: Dockerfile  pyproject.toml
services/voting/src/: manage.py
services/voting/src/access_control/: __init__.py  models.py
services/voting/src/app/: cloud_runtime.py  settings.py  urls.py
services/voting/src/core/: health.py  logging.py  middleware.py
services/voting/src/nominations/: admin.py  admin_api.py  api.py  apps.py  compat.py  data.py  games_api.py  models.py  schemas.py  services.py  test_compat_api.py  test_services_unit.py
services/voting/src/tenant_voting/: api.py  apps.py  context.py  dsar.py  metrics.py  models.py  schemas.py  services.py  templates.py  test_integration.py  test_services_unit.py  test_settings_security.py  tests.py
services/voting/src/votings/: api.py  schemas.py  services.py
(+1172 files in other folders)
