[project]
name = "access"
version = "0.1.0"
description = "Access Control Service"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2",
    "django-ninja>=1.0",
    "django-ydb-backend==0.0.1b1",
    "psycopg[binary]",
    "dj-database-url",
    "gunicorn",
    "ydb==3.28.0",
    "ydb-dbapi==0.1.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app", "src/access", "src/core"]
