[project]
name = "featureflags"
version = "0.1.0"
description = "Feature Flags Service"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2",
    "django-ninja>=1.0",
    "dj-database-url",
    "django-ydb-backend==0.0.1b1",
    "boto3>=1.34",
    "gunicorn",
    "ydb==3.28.0",
    "ydb-dbapi==0.1.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app", "src/featureflags", "src/core"]
