[project]
name = "gamification"
version = "0.1.0"
description = "Gamification Service"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2",
    "django-ninja>=1.0",
    "httpx",
    "psycopg[binary]",
    "dj-database-url",
    "gunicorn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app", "src/gamification", "src/core"]
