[project]
name = "portal"
version = "0.1.0"
description = "Portal Core Service"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2",
    "django-ninja>=1.0",
    "django-ydb-backend==0.0.1b1",
    "psycopg[binary]",
    "dj-database-url",
    "gunicorn",
    "pillow",
    "ydb[yc]==3.28.0",
    "ydb-dbapi==0.1.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app", "src/portal", "src/core"]
